# cox-hazards

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: cox_benchmark.rs
examples/: basic_usage.rs  cross_validation.rs  rmsprop_example.rs
src/: data.rs  error.rs  lib.rs  metrics.rs  model.rs  optimization.rs
tests/: integration_tests.rs
